# daisy

./: .coveragerc  .gitignore  .gitreview  INFO  INFO.yaml  build.sh  coverage.xml  requirements.txt  setup.py  test-requirements.txt  test.sh  tox.ini
ci/: build.sh  kolla-build-vm.sh  kolla-build.sh
ci/build_rpm/: .daisy_rpm_build.sh.swp  Dockerfile  build_rpms.sh  build_rpms_docker.sh  daisy_rpm_build.sh
ci/deploy/: deploy.sh
ci/kolla_patches/: 0000-kolla-odl-ovsdpdk.patch
ci/kolla_patches/6.0.0/: 0000-kolla.patch
code/: .install_interface_patch.sh.swp  install_interface_patch.sh  makefile_patch.sh
code/jasmine/: Makefile.am  README  autogen.sh  buffer.c  buffer.h  client.c  configure.ac  daisy4nfv-jasmine.spec.in  jasmine.spec.in  misc.c  misc.h  server-tcp.c  server-udp.c  server.c  server.h  tcp-common.c  tcp-common.h  tcp-queue.c  tcp-queue.h  udp-common.c  udp-common.h
code/jasmine/build-aux/: git-version-gen
deploy/: README  check_openstack_progress.sh  check_os_progress.sh  daisy.conf  daisy_server.py  deploy.py  deploy.sh  environment.py  get_conf.py  get_para_from_deploy.py  libvirt_utils.py  post.sh  prepare.sh  tempest.py  trustme.sh  utils.py
deploy/common/: query.py
deploy/config/: network.py  schemas.py
deploy/post/: execute.py  glance.py  keystoneauth.py  neutron.py  nova.py
deploy/prepare/: execute.py
deploy/scenario/: ha_nofeature_scenario.yaml  ha_odl-l2_nofeatrue_scenario.yaml  ha_odl-l3_nofeature_scenario.yaml  no-ha_nofeature_scenario.yaml  no-ha_odl-l2_nofeature_scenario.yaml  no-ha_odl-l3_nofeature_scenario.yaml  scenario.yaml
deploy/vm_environment/zte-virtual1/: template.json
docker/: Dockerfile
docs/: conf.yaml  index.rst
docs/configurationguide/: index.rst
docs/developer/design/: multicast.rst
docs/development/design/: ci.rst  deploy.rst  index.rst  multicast.rst
docs/development/requirements/: multicast.rst
docs/installationprocedure/: bmdeploy.rst  index.rst  installation.guide.rst  installation_guide.rst  introduction.rst  vmdeploy.rst
docs/release/configguide/: index.rst  installerconfig.rst  kollaconfig.rst
docs/release/installation/: bmdeploy.rst  build_kolla_image.rst  configdoc.rst  functest.rst  index.rst  installation_guide.rst  introduction.rst  recovery.rst  upgrade.rst  vmdeploy.rst
docs/release/release-notes/: index.rst  release-notes.rst
docs/releasenotes/: index.rst  release-notes.rst
specs/: multicast.txt
templates/physical_environment/networks/: daisy.xml
templates/physical_environment/vms/: daisy.xml
templates/virtual_environment/networks/: daisy1.xml  daisy2.xml  external.xml  keepalived.xml  os-all_in_one.xml
templates/virtual_environment/vms/: all_in_one.xml  computer.xml  computer01.xml  computer02.xml  computer03.xml  computer04.xml  controller.xml  controller01.xml  controller02.xml  controller03.xml  daisy.xml  vmtemplate.xml
tests/: conftest.py
tests/data/common/: sim_stdout_file  ssh_stream_data1.txt  ssh_stream_data2.txt  ssh_stream_data3.txt
tests/data/daisy_conf/: daisy.conf  daisyrc_admin
tests/data/lab_conf/: deploy_bare_odl-ha.yml  deploy_baremetal.yml  deploy_baremetal_invalid_ipmi.yml  deploy_vir1_nosdn-ha.yml  (+6 more)
tests/post/: test_keystoneauth.py  test_post_execute.py
tests/prepare/: test_execute.py  test_prepare_execure.py
tests/unit/: daisyclient_stub.py  test_daisy_server.py  test_deploy.py  test_environment.py  test_get_conf.py  test_libvirt_utils.py  test_placeholder.py  test_tempest.py  test_utils.py
tools/: centos-img-modify.sh  daisy-img-modify.sh  daisy-post-fip.sh
(+21 files in other folders)
